fix: todo board overflow fixed

--- a/styles/todo.css
+++ b/styles/todo.css
@@ -13,7 +13,7 @@
 }
 
 .todo_table>div {
-    height: 85%;
+    height: 65%;
 }
 
 .concrete_todo {
